# CI-CD-practice

./: README.md
examples/: 02_path_parameter.py  03_query_parameter.py  04_optional_parameter.py  05_request_body.py  06_response_body.py  07_form.py  07_form_refactoring.py  login_form.html  pyproject.toml
mlflow-practice/mlruns/0/: meta.yaml
mlflow-practice/mlruns/265679309497078035/: meta.yaml
mlflow-practice/mlruns/265679309497078035/1922b6c598594e46be147b9129f2b5f2/: meta.yaml
mlflow-practice/mlruns/265679309497078035/1922b6c598594e46be147b9129f2b5f2/tags/: mlflow.runName
mlflow-practice/mlruns/265679309497078035/371e3583c5c64a28b032371d18a01bfe/: meta.yaml
mlflow-practice/mlruns/265679309497078035/371e3583c5c64a28b032371d18a01bfe/tags/: mlflow.runName  mlflow.source.git.commit
mlflow-practice/mlruns/265679309497078035/4dcfb81cd3584c0086f37c75c05c9837/: meta.yaml
mlflow-practice/mlruns/265679309497078035/4dcfb81cd3584c0086f37c75c05c9837/tags/: mlflow.runName
mlflow-practice/mlruns/265679309497078035/6973c71d204a42c8b28da1972dfd682e/: meta.yaml
mlflow-practice/mlruns/265679309497078035/6973c71d204a42c8b28da1972dfd682e/tags/: mlflow.runName  mlflow.source.name
mlflow-practice/mlruns/265679309497078035/755b4040e8554512ba2b89e32282d60c/: meta.yaml
mlflow-practice/mlruns/265679309497078035/755b4040e8554512ba2b89e32282d60c/tags/: mlflow.gitRepoURL  mlflow.runName
