[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = "FastAPI Test"
authors = ["박성현_T5083 <silkcoop@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "test_fastapi"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
fastapi = "^0.70.0"
uvicorn = "^0.22.0"
pydantic = "1.10.10"
mlflow = "^2.4.1"
numpy = "^1.25.0"
sklearn = "^0.0.post5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
